--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "angular": "^1.6.6",
     "bootstrap": "^3.3.7",
     "express": "^4.16.2",
+    "jquery": "^3.2.1",
     "mongoose": "^4.13.0",
     "nodemon": "^1.12.1",
     "path": "^0.12.7"
@@ -14,7 +15,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node server/server.js"
+    "start": "node server/server.js"
   },
   "repository": {
     "type": "git",
